js262/test/language/statements/let/syntax/with-initialisers-in-statement-positions-label-statement.js


/*---
es6id: 13.1
description: >
    let declarations with initialisers in statement positions:
    label: Statement
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();
label: let x = 1;
